--- a/src/Components/CvStarDetector/CMakeLists.txt
+++ b/src/Components/CvStarDetector/CMakeLists.txt
@@ -8,7 +8,8 @@ FILE(GLOB files *.cpp)
 FIND_PACKAGE( OpenCV REQUIRED )
 
 FIND_FILE(NONFREE_INCLUDE "opencv2/nonfree/features2d.hpp" PATHS ${OpenCV_INCLUDE_DIRS})
-IF (${OpenCV_VERSION} VERSION_GREATER 2.3.9 AND NONFREE_INCLUDE)
+FIND_FILE(XFEATURES_INCLUDE "opencv2/xfeatures2d.hpp" PATHS ${OpenCV_INCLUDE_DIRS})
+IF (${OpenCV_VERSION} VERSION_GREATER 2.3.9 AND NONFREE_INCLUDE OR XFEATURES_INCLUDE)
 
 # Create an executable file from sources:
 ADD_LIBRARY(CvStarDetector SHARED ${files})
@@ -20,6 +21,6 @@ INSTALL_COMPONENT(CvStarDetector)
 
 ELSE ()
 
-MESSAGE ( STATUS "Skipping STAR - required OpenCV 2.4 with nonfree module. Detected OpenCV ${OpenCV_VERSION}." )
+MESSAGE ( STATUS "Skipping STAR - required module not found." )
 
 ENDIF ()
